[package]
name = "sf_gmst_editor"
version = "0.1.1"
authors = ["rfuzzo"]
edition = "2021"

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
egui-notify = { git = "https://github.com/ItsEthra/egui-notify" }
serde = { version = "1", features = ["derive"] }
catppuccin-egui = "3.0"
env_logger = "0.10"
directories = "5.0"
egui_dnd = "0.5"
open = "5"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
